# xspectra

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docs.md  requirements.txt  setup.cfg  utils.py  visualization.py
examples/: Temperature analysis.ipynb  atom_lights.ipynb  atom_lights.pdf.ipynb  simulation.ipynb  temperature_analysis.ipynb
examples/data/temperature_analysis/: 1.txt  2.txt  3.txt
res_bin/: results.csv
res_bin/1/: results.csv
res_bin/2/: results.csv
res_bin/3/: results.csv
src/xspectra/: bin.py  simulation.py  utils.py  visualization.py
xspectra/: atom.py  simulation.py  utils.py  visualization.py
