[metadata]
name = xspectra
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python library for spectral analysis of nitrogen plasma.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-repo/xspectra
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    astropy==7.0.1
    astroquery==0.4.9.post1
    imageio==2.37.0
    matplotlib==3.10.1
    numpy==2.2.5
    pandas==2.2.3
    scipy==1.15.2

[options.packages.find]
where = src
